# redvector

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  LICENSE  Makefile  README.md  SECURITY.md  diagnose.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_structure.sh  start_threatforge.sh  verificationcommands.md
dashboard/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: BottomBar.tsx  LeftSidebar.tsx  MainTerminal.tsx  NavBar.tsx  RightSidebar.tsx  StatusBar.tsx  Terminal.tsx  TopBar.tsx
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/src/pages/: CryptoPage.tsx  DoSPage.tsx  HomePage.tsx  ReconPage.tsx  ValidationPage.tsx
dashboard/src/store/: appStore.ts
scripts/: demo_crypto.py  demo_dos.py  demo_full.py  demo_recon.py  demo_validation.py  start_all.sh  stop_all.sh  warmup_vigil.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_caesar.py  test_http_flood.py  test_rsa.py  test_syn_scanner.py
threatforge/: __init__.py  main.py
threatforge/api/: crypto.py  dos.py  recon.py  validation.py  websocket.py
threatforge/core/analyzer/: metrics.py
threatforge/core/crypto_attacks/: caesar.py  frequency.py  hill.py  rail_fence.py  rsa_factor.py  vigenere.py
threatforge/core/dos_simulation/: credential_stuff.py  http_flood.py  slowloris.py  syn_flood.py
threatforge/validation/: benchmark.py  correlator.py  matrix_builder.py  sentinel_client.py
(+7 files in other folders)
